--- a/wdt-emoji-bundle.css
+++ b/wdt-emoji-bundle.css
@@ -53,13 +53,11 @@ body[data-wdt-emoji-bundle='apple'] .wdt-emoji[data-has-img-apple='false'] {
 
 /* bundle popup styles */
 .wdt-emoji-popup {
-  position: fixed;
-  top: 0;
-  left: 0;
-  bottom: 0;
+  position: absolute;
+  z-index: -1;
   // visibility: hidden;
 
-  width: 357px;
+  width: 320px;
   max-width: 100%;
   height: 357px;
   max-height: 100%;
@@ -78,6 +76,10 @@ body[data-wdt-emoji-bundle='apple'] .wdt-emoji[data-has-img-apple='false'] {
   // visibility: visible;
 
   opacity: 1;
+}
+
+.wdt-emoji-list {
+  padding-bottom: 10px;
 }
 
 #wdt-emoji-menu-header {
