--- a/wdt-emoji-bundle.css
+++ b/wdt-emoji-bundle.css
@@ -69,7 +69,7 @@ body[data-wdt-emoji-bundle='apple'] .wdt-emoji[data-has-img-apple='false'] {
   height: 357px;
   max-height: 100%;
 
-  transition: opacity 50ms ease;
+  // transition: opacity 50ms ease;
 
   opacity: 0;
   border: 1px solid #dedede;
